@@ -119,6 +119,18 @@ public class Polygon implements Shape2D {
 		dirty = true;
 	}
 
+	 /** Set vertex position
+	  *
+	  * @param index min=0, max=vertices.length/2-1
+	  * @throws IllegalArgumentException if vertex doesnt exist */
+	 public void setVertex (int index, float x, float y) {
+		  if (index < 0 || index > localVertices.length / 2 - 1)
+				throw new IllegalArgumentException("the vertex " + index + " doesn't exist");
+		  localVertices[2 * index] = x;
+		  localVertices[2 * index + 1] = y;
+		  dirty = true;
+	 }
+
 	/** Translates the polygon's position by the specified horizontal and vertical amounts. */
 	public void translate (float x, float y) {
 		this.x += x;
